@@ -1,3 +1,8 @@
+2015-07-30  Pedro Alves  <palves@redhat.com>
+
+	* lib/remote.exp (close_wait_program): New procedure.
+	(local_exec, standard_close): Use it.
+
 2015-05-23  Ben Elliston  <bje@gnu.org>
 
 	* doc/dejagnu.xml: Fix broken URLs.
